kube_pra/09-kube-ingress/ingress-niginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: nginxapp1-ingress-service 
  annotations:
    kubernetes.io/ingress.class: nginx
spec: 
  rules: 
  - http: 
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-nginx-clusterip-service 
            port: 
              number: 80
